<resources>
    <string name="app_name">qpk</string>
    <string name="guest">Guest</string>
    <string name="register_here">Register</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password?</string>

    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_mobile">Mobile Number</string>
    <string name="txt_pass">Password</string>
    <string name="txt_confirm_pass">Confirm Password</string>
    <string name="txt_vehicle">Vehicle Number</string>

    <string name="title_activity_settings">Settings</string>


    <string name="digits_register_text">Confirm Number</string>
    <string name="dgts__login_digits_text">Confirm Number</string>


    <string name="hint_vhclno">Vehicle Number</string>
    <string name="hint_cpn">Apply Coupon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="google_maps_key">AIzaSyA1KEw4sfH8O5M1lBLkrqfNqc2FcXQHGsI</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_navigate_menu">NavigateMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mob">Mobile</string>
    <string name="password">Password</string>
    <string name="confirm_pass">c_pass</string>
    <string name="vehicle">Vehicle</string>


</resources>
